footer fixed and stuck at bottom of page

--- a/app/assets/stylesheets/pages/_list_home.scss
+++ b/app/assets/stylesheets/pages/_list_home.scss
@@ -81,5 +81,5 @@ margin: 50px 50px 40px 50px;
 display: grid;
 grid-template-columns: 1fr 1fr 1fr;
 grid-gap: 35px;
-margin: 0px 75px 0px 75px;
+margin: 0px 75px 150px 75px;
 }
